<resources>
    <string name="app_name">Cuisine</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="fuel_your_day_with_a_perfectly_planned_meal">Fuel Your day with a perfectly planned meal</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register_now">Register Now!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="create_account">Create Account</string>
    <string name="join_the_meal_planning_journey">Join the meal planning journey</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="username_must_be_at_least_3_characters">Username must be at least 3 characters</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters and include one uppercase letter, one lowercase letter, and one number.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwords_must_match">Passwords must match</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_now">Log in Now!</string>
    <string name="email_must_be_valid">Email must be valid</string>
    <string name="sign_up">Sign up</string>
    <string name="invalid_password">⚠️ Invalid password</string>
    <string name="invalid_email">⚠️ Invalid email</string>
    <string name="username_is_too_short">⚠️ Username is too short</string>
    <string name="passwords_do_not_match">⚠️ Passwords do not match</string>
    <string name="welcome_aboard">✨ Welcome aboard! ✨</string>
    <string name="this_email_is_already_registered">⚠️ This email is already registered</string>
    <string name="password_is_too_weak">⚠️ Password is too weak</string>
    <string name="invalid_email_address">⚠️ Invalid email address</string>
    <string name="user_account_not_found">⚠️ User account not found</string>
    <string name="no_internet_connection">⚠️ No internet connection</string>
    <string name="registration_failed_please_try_again">⚠️ Registration failed. Please try again.</string>
    <string name="wrong_email_or_password">⚠️ Wrong email or password</string>
    <string name="request_timed_out_please_try_again">⚠️ Request timed out please try again</string>
    <string name="too_many_attempts_please_try_again_later">⚠️ Too many attempts. Please try again later</string>
    <string name="google_sign_in_failed">⚠️ Google sign-in failed</string>
    <string name="google_sign_in_was_cancelled">⚠️ Google sign-in was cancelled</string>
    <string name="google_play_services_is_not_available">⚠️ Google Play Services is not available</string>
    <string name="no_account_found_with_this_email">⚠️ No account found with this email</string>
    <string name="this_account_has_been_disabled">⚠️ This account has been disabled</string>
    <string name="this_google_account_is_already_linked_to_another_user">⚠️ This Google account is already linked to another user</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_google_accounts_found">⚠️ No google accounts found</string>
    <string name="google_credential_error">⚠️ Unable to get google credentials</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="plans">Plans</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="picked_for_you">Picked for You</string>
    <string name="meal_image">Meal Image</string>
    <string name="star_ingredients">Star Ingredients</string>
    <string name="today_s_meals">Today\'s Meals</string>
    <string name="connection_timeout_please_check_your_internet">⚠️ Connection timeout. Please check your internet.</string>
    <string name="service_temporarily_unavailable">⚠️ Service temporarily unavailable. Please try again later.</string>
    <string name="no_meals_available_right_now">⚠️ No meals available right now</string>
    <string name="something_went_wrong_please_try_again">⚠️ Something went wrong. Please try again.</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="watch_now">Watch now</string>
    <string name="add_to_plan">Add To Plan</string>
    <string name="select_date">Select date</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="meal_added_to_plan">🎉 Meal Added successfully</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add__meal_to_plan">Add Meal to plan</string>
    <string name="select_meal_type">Select meal type</string>
    <string name="empty">Empty</string>
    <string name="to">to</string>
    <string name="update">Update</string>
    <string name="delete_from_plan">Delete from plan</string>
    <string name="an_empty_meal_plan_isn_t_a_failure_it_s_a_blank_canvas">An empty meal plan isn’t a failure…\nIt’s a blank canvas.</string>
    <string name="undo">Undo</string>
    <string name="meal_deleted_successfully">Meal deleted successfully</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="cuisines">Cuisines</string>
    <string name="categories">Categories</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="all_favorites">All favorites</string>
    <string name="vertical_drag_handle">vertical drag handle</string>
    <string name="profile_data">Profile data</string>
    <string name="stats">Stats</string>
    <string name="back_up_your_data">Back up Your Data</string>
    <string name="zero">0</string>
    <string name="actions">Actions</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_you_want_to_sign_out">Sign Out?</string>
    <string name="you_will_lose_all_data_that_hasn_t_been_backed_up">You will lose all data that hasn\'t been backed up</string>
    <string name="guest">Guest</string>
    <string name="you_re_in_guest_mode_sign_in_to_save_your_favorites_and_meal_plans">You\'re in guest mode. Sign in to save your favorites and meal plans</string>
    <string name="data_uploaded_successfully">Data uploaded successfully</string>
    <string name="dialog_icon">Dialog Icon</string>
</resources>