<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            style="@style/TextAppearance.Cuisine.DisplaySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_back"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            style="@style/TextAppearance.Cuisine.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_your_day_with_a_perfectly_planned_meal"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/materialTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            style="@style/TextAppearance.Cuisine.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/materialTextView2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:helperText="@string/enter_a_valid_email"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/materialTextView3"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/md_theme_onPrimaryContainer">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView4"
            style="@style/TextAppearance.Cuisine.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/email_text_input_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input_layout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconDrawable="@drawable/ic_password_toggle"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/md_theme_onBackground"
            app:helperText="Password must be at least 8 characters and include one uppercase letter, one lowercase letter, and one number."
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/materialTextView4"
            app:startIconDrawable="@drawable/ic_pass"
            app:startIconTint="@color/md_theme_onPrimaryContainer">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgot_password_text"
            style="@style/TextAppearance.Cuisine.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/forgot_password"
            android:textColor="@color/md_theme_primary"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/password_text_input_layout" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/log_in"
            android:textAppearance="@style/TextAppearance.Cuisine.TitleLarge"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView5"
            style="@style/TextAppearance.Cuisine.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/materialButton" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register_text"
            style="@style/TextAppearance.Cuisine.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/register_now"
            android:textColor="@color/md_theme_primary"
            app:layout_constraintBaseline_toBaselineOf="@id/materialTextView5"
            app:layout_constraintStart_toEndOf="@id/materialTextView5" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/md_theme_outlineVariant"
            app:layout_constraintBottom_toBottomOf="@id/materialTextView6"
            app:layout_constraintEnd_toStartOf="@id/materialTextView6"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@id/materialTextView6" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView6"
            style="@style/TextAppearance.Cuisine.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/or"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/materialTextView5" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/md_theme_outlineVariant"
            app:layout_constraintBottom_toBottomOf="@id/materialTextView6"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/materialTextView6"
            app:layout_constraintTop_toTopOf="@id/materialTextView6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_btn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/continue_with_google"
            android:textAppearance="@style/TextAppearance.Cuisine.TitleLarge"
            app:icon="@drawable/ic_google"
            app:iconPadding="0dp"
            app:iconSize="30dp"
            app:iconTint="@null"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/materialTextView6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/guest_btn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/continue_as_a_guest"
            android:textAppearance="@style/TextAppearance.Cuisine.TitleLarge"
            app:icon="@drawable/ic_person"
            app:iconPadding="0dp"
            app:iconSize="30dp"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/google_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

